--- a/README
+++ b/README
@@ -1,1 +1,7 @@
-this is the template I use to build a new presentation
+Distribution Shootout.
+
+A discussion about some of the different Linux distributions.
+
+We'll discuss the main families of Linux distros; benefits and downsides of each; and help you decide which is best for your needs.
+
+
