shelving as shown for CHUGALUG

--- a/README
+++ b/README
@@ -4,4 +4,5 @@ A discussion about some of the different Linux distributions.
 
 We'll discuss the main families of Linux distros; benefits and downsides of each; and help you decide which is best for your needs.
 
+This presentation is mostly focused to new users of Linux, however veteran users will most likely find some little tip or trick.
 
